<resources>
    <string name="app_name">Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">ToDo</string>
    <string name="slogon">Categorize, prioritize and organize your daily tasks</string>
    <string name="todo">TODO</string>
    <string name="completed">Completed</string>
    <string name="list">Todo Lists</string>
    <string name="categories">Categories</string>
    <string name="priorities">Priorities</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="priority">Priority :</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="select_category">Select category</string>
    <string name="save">Save</string>
    <string name="set_time_and_date">Set time and date</string>
    <string name="time_and_date">Time and date</string>
    <string name="text">text</string>
    <string name="option">option</string>
    <string name="to_start">To Start</string>
    <string name="in_progress">In-Progress</string>
    <string name="status">Status</string>
</resources>