<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        tools:context=".MainActivity"
        tools:viewBindingIgnore="true">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="750dp"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@+id/filter_btn"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.067" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginEnd="1dp"
            android:background="@color/blue"
            android:gravity="center"
            android:paddingTop="6dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/list_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@drawable/active_btns"
                android:padding="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/history_btn"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/list_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/list"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/history_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/history"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/completed"/>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="addTodo"
                app:backgroundTint="#F89E4A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/history_btn"
                app:layout_constraintStart_toEndOf="@+id/list_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/add" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/filter_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/filter_background"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/filter" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/filter_btn"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:padding="8dp"
            android:rotation="0"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/filter_btn"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/priorities"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/filter_btn"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:padding="8dp"
            android:rotation="0"
            android:rotationY="0"
            android:text="@string/priorities"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/categories"
            app:layout_constraintEnd_toEndOf="@+id/categories"
            app:layout_constraintStart_toStartOf="@+id/categories" />

        <TextView
            android:id="@+id/time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/filter_btn"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:padding="8dp"
            android:rotation="0"
            android:rotationX="0"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/priorities"
            app:layout_constraintEnd_toEndOf="@+id/priorities"
            app:layout_constraintStart_toStartOf="@+id/priorities" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>